--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -57,7 +57,7 @@ jobs:
         example:
           - "hello"
         package: ["pio","qio"]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, ubuntu-18.04, ubuntu-16.04]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -69,6 +69,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
+          architecture: 'x86'
 
       - name: Install qio
         if: matrix.package == 'qio'
