--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,7 @@ on:
       - 'examples/**'
       - '**.json'
       - '**.py'
+      - '**.yml'
 
 jobs:
   CodeCheck:
@@ -68,7 +69,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9
+          python-version: 3.6
           architecture: 'x86'
 
       - name: Install qio
